fix: public checkbox alignment in source form

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 SESSION_SECRET=
 
-# Admin emails (comma-separated, first login gets admin role)
-ADMIN_EMAILS=
+# API Key for POST /api/digests and PUT /api/config
+API_KEY=
 
 # Server
 DIGEST_PORT=8767
